--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <div class="intro-text">
           <h2>Bugheanu Danut-Andrei</h2>
           <h3>Frontend Web <br> Developer </h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, obcaecati?</p>
+          <p>I'm a self taught frontend developer whos passionate about learning new skills or sharp the existent ones and making new
+            friends along the way. I am able to work under pressure and to finish my task in time. For my future i want to gain more experience in a company and why not, touch the goals together.
+            </p>
           <div class="intro-social">
             <a target="_blank" href="https://github.com/Prajituric"><img src="/icons/github.svg" alt="github-social-link"></a>
             <a target="_blank" href="https://www.linkedin.com/in/bugheanu-danut-andrei-b79aa021a/"><img src="/icons/linked-in.svg" alt="linkedIn-social-link"></a>
