--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="A frontend web Developer who specializes in html, css, javascript and other frameworks and technologies"
     />
     <meta name="robots" content="index, follow" />
-    <link rel="icon" href="icons/camera.png" />
+    <link rel="icon" href="./icons/online-resume.png" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css" />
 
@@ -258,5 +258,6 @@
             <li><a target="_blank" href="https://www.instagram.com/d.andrei.21/"><img src="/icons/instagram 1.svg" alt="twitter-social-link"></a></li>
         </ul>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
