--- a/projects/index.html
+++ b/projects/index.html
@@ -35,8 +35,8 @@
           <a href="https://travelwithlove.netlify.app" target="_blank"><img src="../images/travelly.jpg" alt="travelly-project"></a>
           </div>
           <div class="photography-site">
-            <a href="https://photographerantonia.netlify.app" target=""><h2>Anuh Photography</h2></a>
-            <a href="https://photographerantonia.netlify.app"><img src="../images/elena-joy.jpg" alt="photography-project"></a>
+            <a href="https://photographerantonia.netlify.app" target="_blank"><h2>Anuh Photography</h2></a>
+            <a href="https://photographerantonia.netlify.app" target="_blank"><img src="../images/elena-joy.jpg" alt="photography-project"></a>
           </div>
       </section>
       <footer>
