--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         </div>
       </section>
       <footer>
-        <h4>Bugheanu Danut Danut-Andrei &copy; 2022</h4>
+        <h4>Bugheanu Danut-Andrei &copy; 2022</h4>
         <ul>
             <li><a target="_blank" href="https://twitter.com/BugheanuDanut"><img src="/icons/twitter 1.svg" alt="twitter-social-link"></a></li>
             <li><a target="_blank" href="https://www.instagram.com/d.andrei.21/"><img src="/icons/instagram 1.svg" alt="twitter-social-link"></a></li>
