--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="intro-text">
           <h2>Bugheanu Danut-Andrei</h2>
           <h3>Frontend Web <br> Developer </h3>
-          <p>I'm a self taught frontend developer whos passionate about learning new skills or sharp the existent ones and making new
+          <p>I'm a self taught frontend developer who's passionate about learning new skills or sharp the existent ones and making new
             friends along the way. I am able to work under pressure and to finish my task in time. For my future i want to gain more experience in a company and why not, touch the goals together.
             </p>
           <div class="intro-social">
