new project update

--- a/projects/index.html
+++ b/projects/index.html
@@ -30,6 +30,10 @@
           </nav>
       </header>
       <section class="projects">
+        <div class="omnifood">
+          <a href="https://foodhealthy.netlify.app/" target="_blank"><h2>Omnifood | Healthy-food App</h2></a>
+          <a href="https://foodhealthy.netlify.app/" target="_blank"><img class="omni" src="../images/Untitled-1.png" alt="photography-project"></a>
+        </div>
           <div class="travelly">
             <a href="https://travelwithlove.netlify.app" target="_blank"><h2>Travelly</h2></a>
           <a href="https://travelwithlove.netlify.app" target="_blank"><img src="../images/travelly.jpg" alt="travelly-project"></a>
