fnew icons and one more project

--- a/contact/index.html
+++ b/contact/index.html
@@ -48,8 +48,13 @@
         <ul>
             <li><a target="_blank" href="https://twitter.com/BugheanuDanut"><img src="/icons/twitter 1.svg" alt="twitter-social-link"></a></li>
             <li><a target="_blank" href="https://www.instagram.com/d.andrei.21/"><img src="/icons/instagram 1.svg" alt="twitter-social-link"></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100007786965978"><ion-icon class="icon-fb" name="logo-facebook"></ion-icon></a></li>
+            <li><a target="_blank" href="https://wa.me/qr/QAABHCIKJ6QUD1"><ion-icon class="icon-wapp" name="logo-whatsapp"></ion-icon></a></li>
         </ul>
     </footer>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="script.js"></script>
     </body>
 </html>
