--- a/projects/index.html
+++ b/projects/index.html
@@ -30,10 +30,6 @@
           </nav>
       </header>
       <section class="projects">
-        <div class="omnifood">
-          <a href="https://foodhealthy.netlify.app/" target="_blank"><h2>Omnifood | Healthy-food App</h2></a>
-          <a href="https://foodhealthy.netlify.app/" target="_blank"><img class="omni" src="../images/Untitled-1.png" alt="photography-project"></a>
-        </div>
           <div class="travelly">
             <a href="https://travelwithlove.netlify.app" target="_blank"><h2>Travelly</h2></a>
           <a href="https://travelwithlove.netlify.app" target="_blank"><img src="../images/travelly.jpg" alt="travelly-project"></a>
@@ -42,14 +38,23 @@
             <a href="https://photographerantonia.netlify.app" target="_blank"><h2>Anuh Photography</h2></a>
             <a href="https://photographerantonia.netlify.app" target="_blank"><img src="../images/elena-joy.jpg" alt="photography-project"></a>
           </div>
+          <div class="omnifood">
+            <a href="https://foodhealthy.netlify.app/" target="_blank"><h2>Healthy-food App</h2></a>
+            <a href="https://foodhealthy.netlify.app/" target="_blank"><img class="omni" src="../images/Untitled-1.png" alt="photography-project"></a>
+          </div>
+          
       </section>
       <footer>
         <h4>Bugheanu Danut-Andrei &copy; 2022</h4>
         <ul>
             <li><a target="_blank" href="https://twitter.com/BugheanuDanut"><img src="/icons/twitter 1.svg" alt="twitter-social-link"></a></li>
             <li><a target="_blank" href="https://www.instagram.com/d.andrei.21/"><img src="/icons/instagram 1.svg" alt="twitter-social-link"></a></li>
+            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100007786965978"><ion-icon class="icon-fb" name="logo-facebook"></ion-icon></a></li>
+            <li><a target="_blank" href="https://wa.me/qr/QAABHCIKJ6QUD1"><ion-icon class="icon-wapp" name="logo-whatsapp"></ion-icon></a></li>
         </ul>
     </footer>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
