update home links

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       <header class="main-head">
           <nav>
               <div class="logo">
-                  <img src="/icons/code.svg" alt="logo"></img>
-                      <h1>Danut-Andrei</h1>
+                  <a href="/"><img src="/icons/code.svg" alt="logo"></img></a>
+                      <a href="/">
+                        <h1>Danut-Andrei</h1>
+                      </a>
               </div>
               <ul>
                   <li><a class="active" href="/">Home</a></li>
