--- a/contact/index.html
+++ b/contact/index.html
@@ -19,8 +19,10 @@
       <header class="main-head">
           <nav>
               <div class="logo">
-                  <img src="/icons/code.svg" alt="logo"></img>
-                      <h1>Danut-Andrei</h1>
+                <a href="../index.html"><img src="/icons/code.svg" alt="logo"></img></a>
+                <a href="../index.html">
+                  <h1>Danut-Andrei</h1>
+                </a>
               </div>
               <ul>
                   <li><a href="../index.html">Home</a></li>
